--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Viewer</title>
+  <title>Campus</title>
+  <link rel="icon" href="icon.png" type="image/png">
   <style>
     :root {
       --bg: #111;
