--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         card.className = "video-card";
         card.id = `video-${video.id}`;
         card.innerHTML = `
-          <a href="/v/${video.id}" style="text-decoration: none; color: inherit;">
+          <a href="video.html?id=${video.id}" style="text-decoration: none; color: inherit;">
             <div class="video-info">
               <h3>${video.title}</h3>
               <p>${video.description}</p>
