--- a/video.html
+++ b/video.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Watch Video</title>
+  <title>Campus Inkrement</title>
+  <link rel="icon" href="icon.png" type="image/png">
   <style>
     :root {
       --bg: #111;
