--- a/panel/index.html
+++ b/panel/index.html
@@ -1,65 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Login | Panel</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body {
-      font-family: system-ui, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #111;
-      color: white;
-    }
-    form {
-      background: #1e1e1e;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.3);
-      width: 300px;
-    }
-    input, button {
-      width: 100%;
-      padding: 0.8rem;
-      margin-top: 1rem;
-      border: none;
-      border-radius: 5px;
-    }
-    input {
-      background: #2c2c2c;
-      color: white;
-    }
-    button {
-      background: #28a745;
-      color: white;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-  <form id="loginForm">
-    <h2>Login to Panel</h2>
-    <input type="text" id="username" placeholder="Username" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <button type="submit">Login</button>
-  </form>
-
-  <script>
-    document.getElementById("loginForm").onsubmit = (e) => {
-      e.preventDefault();
-      const user = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
-
-      if (user === "parcanz" && pass === "panel") {
-        localStorage.setItem("auth", "true");
-        window.location.href = "panel.html";
-      } else {
-        alert("❌ Invalid credentials");
-      }
-    };
-  </script>
-</body>
-</html>
+<script language=javascript>document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%0A%3C%68%65%61%64%3E%0A%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%20%2F%3E%0A%20%20%3C%74%69%74%6C%65%3E%4C%6F%67%69%6E%20%7C%20%50%61%6E%65%6C%3C%2F%74%69%74%6C%65%3E%0A%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%22%20%2F%3E%0A%20%20%3C%73%74%79%6C%65%3E%0A%20%20%20%20%62%6F%64%79%20%7B%0A%20%20%20%20%20%20%66%6F%6E%74%2D%66%61%6D%69%6C%79%3A%20%73%79%73%74%65%6D%2D%75%69%2C%20%73%61%6E%73%2D%73%65%72%69%66%3B%0A%20%20%20%20%20%20%64%69%73%70%6C%61%79%3A%20%66%6C%65%78%3B%0A%20%20%20%20%20%20%6A%75%73%74%69%66%79%2D%63%6F%6E%74%65%6E%74%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%61%6C%69%67%6E%2D%69%74%65%6D%73%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%68%65%69%67%68%74%3A%20%31%30%30%76%68%3B%0A%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%23%31%31%31%3B%0A%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%77%68%69%74%65%3B%0A%20%20%20%20%7D%0A%20%20%20%20%66%6F%72%6D%20%7B%0A%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%23%31%65%31%65%31%65%3B%0A%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%32%72%65%6D%3B%0A%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%38%70%78%3B%0A%20%20%20%20%20%20%62%6F%78%2D%73%68%61%64%6F%77%3A%20%30%20%30%20%32%30%70%78%20%72%67%62%61%28%30%2C%30%2C%30%2C%30%2E%33%29%3B%0A%20%20%20%20%20%20%77%69%64%74%68%3A%20%33%30%30%70%78%3B%0A%20%20%20%20%7D%0A%20%20%20%20%69%6E%70%75%74%2C%20%62%75%74%74%6F%6E%20%7B%0A%20%20%20%20%20%20%77%69%64%74%68%3A%20%31%30%30%25%3B%0A%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%30%2E%38%72%65%6D%3B%0A%20%20%20%20%20%20%6D%61%72%67%69%6E%2D%74%6F%70%3A%20%31%72%65%6D%3B%0A%20%20%20%20%20%20%62%6F%72%64%65%72%3A%20%6E%6F%6E%65%3B%0A%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%35%70%78%3B%0A%20%20%20%20%7D%0A%20%20%20%20%69%6E%70%75%74%20%7B%0A%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%23%32%63%32%63%32%63%3B%0A%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%77%68%69%74%65%3B%0A%20%20%20%20%7D%0A%20%20%20%20%62%75%74%74%6F%6E%20%7B%0A%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%23%32%38%61%37%34%35%3B%0A%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%77%68%69%74%65%3B%0A%20%20%20%20%20%20%63%75%72%73%6F%72%3A%20%70%6F%69%6E%74%65%72%3B%0A%20%20%20%20%7D%0A%20%20%3C%2F%73%74%79%6C%65%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%20%20%3C%66%6F%72%6D%20%69%64%3D%22%6C%6F%67%69%6E%46%6F%72%6D%22%3E%0A%20%20%20%20%3C%68%32%3E%4C%6F%67%69%6E%20%74%6F%20%50%61%6E%65%6C%3C%2F%68%32%3E%0A%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%74%65%78%74%22%20%69%64%3D%22%75%73%65%72%6E%61%6D%65%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%55%73%65%72%6E%61%6D%65%22%20%72%65%71%75%69%72%65%64%20%2F%3E%0A%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%70%61%73%73%77%6F%72%64%22%20%69%64%3D%22%70%61%73%73%77%6F%72%64%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%50%61%73%73%77%6F%72%64%22%20%72%65%71%75%69%72%65%64%20%2F%3E%0A%20%20%20%20%3C%62%75%74%74%6F%6E%20%74%79%70%65%3D%22%73%75%62%6D%69%74%22%3E%4C%6F%67%69%6E%3C%2F%62%75%74%74%6F%6E%3E%0A%20%20%3C%2F%66%6F%72%6D%3E%0A%0A%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%6C%6F%67%69%6E%46%6F%72%6D%22%29%2E%6F%6E%73%75%62%6D%69%74%20%3D%20%28%65%29%20%3D%3E%20%7B%0A%20%20%20%20%20%20%65%2E%70%72%65%76%65%6E%74%44%65%66%61%75%6C%74%28%29%3B%0A%20%20%20%20%20%20%63%6F%6E%73%74%20%75%73%65%72%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%75%73%65%72%6E%61%6D%65%22%29%2E%76%61%6C%75%65%3B%0A%20%20%20%20%20%20%63%6F%6E%73%74%20%70%61%73%73%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%70%61%73%73%77%6F%72%64%22%29%2E%76%61%6C%75%65%3B%0A%0A%20%20%20%20%20%20%69%66%20%28%75%73%65%72%20%3D%3D%3D%20%22%70%61%72%63%61%6E%7A%22%20%26%26%20%70%61%73%73%20%3D%3D%3D%20%22%70%61%6E%65%6C%22%29%20%7B%0A%20%20%20%20%20%20%20%20%6C%6F%63%61%6C%53%74%6F%72%61%67%65%2E%73%65%74%49%74%65%6D%28%22%61%75%74%68%22%2C%20%22%74%72%75%65%22%29%3B%0A%20%20%20%20%20%20%20%20%77%69%6E%64%6F%77%2E%6C%6F%63%61%74%69%6F%6E%2E%68%72%65%66%20%3D%20%22%70%61%6E%65%6C%2E%68%74%6D%6C%22%3B%0A%20%20%20%20%20%20%7D%20%65%6C%73%65%20%7B%0A%20%20%20%20%20%20%20%20%61%6C%65%72%74%28%22%C%20%49%6E%76%61%6C%69%64%20%63%72%65%64%65%6E%74%69%61%6C%73%22%29%3B%0A%20%20%20%20%20%20%7D%0A%20%20%20%20%7D%3B%0A%20%20%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'))</script>
