--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
   <script>
     const BIN_ID = "684194ea8a456b7966a9ced1";
     const API_KEY = "$2a$10$f2z0PYYxfzeZrSzazT56I.ZoVOA0Puemv9KpqA/MbZMd7yz28gqnm";
-    const API_URL = https://api.jsonbin.io/v3/b/${BIN_ID};
+    const API_URL = `https://api.jsonbin.io/v3/b/${BIN_ID}`;
     let allVideos = [];
     let displayCount = 15;
 
@@ -298,7 +298,7 @@
         videos.unshift(url);
         await saveVideos(videos);
         await loadAndRenderVideos();
-        showToast("✅ Video uploaded", #video-${id});
+        showToast("✅ Video uploaded", `#video-${id}`);
       } else {
         showToast("⚠️ Video already exists");
       }
@@ -314,18 +314,18 @@
 
     async function getMeta(videoId) {
       try {
-        const res = await fetch(https://noembed.com/embed?url=https://www.youtube.com/watch?v=${videoId});
+        const res = await fetch(`https://noembed.com/embed?url=https://www.youtube.com/watch?v=${videoId}`);
         const data = await res.json();
         return {
           title: data.title || "Unknown Title",
           description: data.description || "",
-          thumbnail: https://img.youtube.com/vi/${videoId}/hqdefault.jpg
+          thumbnail: `https://img.youtube.com/vi/${videoId}/hqdefault.jpg`
         };
       } catch {
         return {
           title: "Unknown Title",
           description: "",
-          thumbnail: https://img.youtube.com/vi/${videoId}/hqdefault.jpg
+          thumbnail: `https://img.youtube.com/vi/${videoId}/hqdefault.jpg`
         };
       }
     }
